improvements in test setup and some minor tweaks, fix #53